Add Bootstrap-specific form to DRY up forms.

--- a/app/views/dashboard/arms/_add_arm_form.html.haml
+++ b/app/views/dashboard/arms/_add_arm_form.html.haml
@@ -20,7 +20,7 @@
 
 .modal-dialog
   .modal-content
-    = form_for arm, remote: true, url: dashboard_arms_path(arm), html: {class: "form-horizontal", role: "form"} do |a|
+    = form_for arm, width: 4, locale_base: t(:arms)[:form_fields], builder: BootstrapFormBuilder, remote: true, url: dashboard_arms_path(arm), html: {class: "form-horizontal", role: "form"} do |a|
       .modal-header
         %button.close{ type: 'button', data: { dismiss: 'modal' } }
           %span{ aria: { hidden:'true' } } &times;
@@ -36,17 +36,17 @@
             = hidden_field_tag :service_request_id, service_request.id
             = hidden_field_tag :sub_service_request_id, sub_service_request.id
             .form-group
-              = a.label :name, t(:arms)[:form_fields][:name], class: "col-sm-4 control-label required", title: t(:arms)[:name_tooltip], data: { toggle: 'tooltip', animation: 'false' }
+              = a.label :name, class: "required", title: t(:arms)[:name_tooltip], data: { toggle: 'tooltip', animation: 'false' }
               .col-sm-7
-                = a.text_field :name, { class: 'form-control' }
+                = a.text_field :name
             .form-group
-              = a.label :subject_count, t(:arms)[:form_fields][:subject_count], class: "col-sm-4 control-label required"
+              = a.label :subject_count, class: "required"
               .col-sm-7
-                = a.text_field :subject_count, { class: 'form-control', value: '' }
+                = a.text_field :subject_count, value: ''
             .form-group
-              = a.label :visit_count, t(:arms)[:form_fields][:visit_count], class: "col-sm-4 control-label required"
+              = a.label :visit_count, class: "required"
               .col-sm-7
-                = a.text_field :visit_count, { class: 'form-control', value: '' }
+                = a.text_field :visit_count, value: ''
       .modal-footer
         .center-block
           %button.btn.btn-default{ type: 'button', data: { dismiss: 'modal' } }
