--- a/app/views/arms/_arm_form.html.haml
+++ b/app/views/arms/_arm_form.html.haml
@@ -19,7 +19,7 @@
 -# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .modal-dialog
   .modal-content
-    = form_for arm, url: path, remote: true, html: { class: "form-horizontal", role: "form" } do |a|
+    = form_for arm, builder: BootstrapFormBuilder, width: 4, locale_base: t(:arms)[:form_fields], url: path, remote: true, html: { class: "form-horizontal", role: "form" } do |a|
       .modal-header
         %button.close{ type: 'button', data: { dismiss: 'modal' } }
           %span{ aria: { hidden:'true' } } &times;
@@ -33,17 +33,17 @@
             = hidden_field_tag :protocol_id, protocol.id
             = hidden_field_tag :service_request_id, service_request.id
             .form-group
-              = a.label :name, t(:arms)[:form_fields][:name], class: "col-sm-4 control-label required", title: t(:arms)[:name_tooltip], data: { toggle: 'tooltip', animation: 'false' }
+              = a.label :name, class: "required", title: t(:arms)[:name_tooltip], data: { toggle: 'tooltip', animation: 'false' }
               .col-sm-7
-                = a.text_field :name, { class: 'form-control' }
+                = a.text_field :name
             .form-group
-              = a.label :subject_count, t(:arms)[:form_fields][:subject_count], class: "col-sm-4 control-label required"
+              = a.label :subject_count, class: "required"
               .col-sm-7
-                = a.text_field :subject_count, { class: 'form-control' }
+                = a.text_field :subject_count
             .form-group
-              = a.label :visit_count, t(:arms)[:form_fields][:visit_count], class: "col-sm-4 control-label required"
+              = a.label :visit_count, class: "required"
               .col-sm-7
-                = a.text_field :visit_count, { class: 'form-control' }
+                = a.text_field :visit_count
       .modal-footer
         .center-block
           %button.btn.btn-default{ type: 'button', data: { dismiss: 'modal' } }
