--- a/app/views/dashboard/arms/_edit_arm_form.html.haml
+++ b/app/views/dashboard/arms/_edit_arm_form.html.haml
@@ -18,17 +18,17 @@
 -# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
 -# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-= form_for arm, {remote: true, url: dashboard_arm_path(arm), html: {class: "form-horizontal edit_arm", id: "edit_arm", role: "form"}} do |a|
+= form_for arm, { width: 5, locale_base: t(:arms)[:form_fields], builder: BootstrapFormBuilder, remote: true, url: dashboard_arm_path(arm), html: {class: "form-horizontal edit_arm", id: "edit_arm", role: "form"}} do |a|
   = hidden_field_tag :service_request_id, service_request.id
   = hidden_field_tag :sub_service_request_id, sub_service_request.id
   .form-group
-    = a.label "name", t(:arms)[:form_fields][:name], class: "col-sm-4 control-label required"
+    = a.label :name, class: "required"
     .col-sm-7
-      = a.text_field "name", {class: 'form-control'}
+      = a.text_field :name
   .form-group
-    = a.label "subject_count", t(:arms)[:form_fields][:subject_count], class: "col-sm-4 control-label required"
+    = a.label :subject_count, class: "required"
     .col-sm-7
-      = a.text_field "subject_count", {class: 'form-control'}
+      = a.text_field :subject_count
   .modal-footer
     .center-block
       %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}
