--- a/app/views/dashboard/documents/_document_form.html.haml
+++ b/app/views/dashboard/documents/_document_form.html.haml
@@ -19,7 +19,7 @@
 -# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .modal-dialog
   .modal-content
-    = form_for ([:dashboard, document]), remote: true, multipart: true, authenticity_token: form_authenticity_token, html: { class: 'form-horizontal', role: 'form' } do |form|
+    = form_for ([:dashboard, document]), width: 5, locale_base: t(:documents)[:form_fields], builder: BootstrapFormBuilder, remote: true, multipart: true, authenticity_token: form_authenticity_token, html: { class: 'form-horizontal', role: 'form' } do |form|
       .modal-header
         %button.close{ type: 'button', data: { dismiss: 'modal' } }
           %span{ aria: { hidden:'true' } } &times;
@@ -32,23 +32,23 @@
           .col-md-12
             = hidden_field_tag :protocol_id, form.object.protocol.id
             .form-group
-              = form.label :doc_type, t(:documents)[:form_fields][:document_type], class: 'col-sm-4 control-label required'
+              = form.label :doc_type, class: 'required'
               .col-sm-7
-                = form.select :doc_type, options_for_select(DOCUMENT_TYPES, document.doc_type), { prompt: t(:documents)[:select_type] }, class: 'form-control selectpicker'
+                = form.select :doc_type, options_for_select(DOCUMENT_TYPES, document.doc_type), { prompt: t(:documents)[:select_type] }, class: 'selectpicker'
             .form-group#doc-type-other-field{ display_if(document.doc_type == 'other') }
-              = form.label :doc_type_other, t(:documents)[:form_fields][:specify_doc_type], class: 'col-sm-4 control-label required'
+              = form.label :doc_type_other, class: 'required'
               .col-sm-7
-                = form.text_field :doc_type_other, {class: 'form-control'}
+                = form.text_field :doc_type_other
             .form-group
-              = form.label :document, t(:documents)[:form_fields][:document], class: 'col-sm-4 control-label required'
+              = form.label :document, class: 'required'
               .col-sm-7
                 %p.help-block
                   = document.document_file_name
                 = form.file_field :document
             .form-group
-              = form.label :org_ids, t(:documents)[:form_fields][:access], class: 'col-sm-4 control-label'
+              = form.label :org_ids
               .col-sm-7
-                = select_tag :org_ids, document_org_access_collection(document, action), class: 'form-control selectpicker', multiple: true
+                = select_tag :org_ids, document_org_access_collection(document, action), class: 'selectpicker', multiple: true
       .modal-footer
         .center-block
           %button.btn.btn-default{ type: 'button', data: { dismiss: 'modal' } }
