--- a/app/views/documents/_document_form.html.haml
+++ b/app/views/documents/_document_form.html.haml
@@ -33,23 +33,23 @@
             = hidden_field_tag :protocol_id, form.object.protocol.id
             = hidden_field_tag :service_request_id, service_request.id
             .form-group
-              = form.label :doc_type, t(:documents)[:form_fields][:document_type], class: 'col-sm-4 control-label required'
+              = form.label :doc_type, class: 'required'
               .col-sm-7
-                = form.select :doc_type, options_for_select(DOCUMENT_TYPES, document.doc_type), { prompt: t(:documents)[:select_type] }, class: 'form-control selectpicker'
+                = form.select :doc_type, options_for_select(DOCUMENT_TYPES, document.doc_type), { prompt: t(:documents)[:select_type] }, class: 'selectpicker'
             .form-group#doc-type-other-field{ display_if(document.doc_type == 'other') }
-              = form.label :doc_type_other, t(:documents)[:form_fields][:specify_doc_type], class: 'col-sm-4 control-label required'
+              = form.label :doc_type_other, class: 'required'
               .col-sm-7
-                = form.text_field :doc_type_other, class: 'form-control'
+                = form.text_field :doc_type_other
             .form-group
-              = form.label :document, t(:documents)[:form_fields][:document], class: 'col-sm-4 control-label required'
+              = form.label :document, class: 'required'
               .col-sm-7
                 %p.help-block
                   = document.document_file_name
                 = form.file_field :document
             .form-group
-              = form.label :org_ids, t(:documents)[:form_fields][:access], class: 'col-sm-4 control-label'
+              = form.label :org_ids
               .col-sm-7
-                = select_tag :org_ids, options_from_collection_for_select(document.protocol.organizations.distinct.sort_by(&:name), :id, :name, document.sub_service_requests.map(&:organization_id)), class: 'form-control selectpicker', multiple: true
+                = select_tag :org_ids, options_from_collection_for_select(document.protocol.organizations.distinct.sort_by(&:name), :id, :name, document.sub_service_requests.map(&:organization_id)), class: 'selectpicker', multiple: true
       .modal-footer
         .center-block
           %button.btn.btn-default{ type: 'button', data: { dismiss: 'modal' } }
