--- a/app/views/dashboard/multiple_line_items/_change_service_form.html.haml
+++ b/app/views/dashboard/multiple_line_items/_change_service_form.html.haml
@@ -20,7 +20,7 @@
 
 .modal-dialog
   .modal-content
-    = form_for line_item, {remote: true, html: {class: "form-horizontal", role: "form"}} do |p|
+    = form_for line_item, {builder: BootstrapFormBuilder, width: 4, locale_base: t(:line_item)[:service], remote: true, html: {class: "form-horizontal", role: "form"}} do |p|
       .modal-header
         %button.close{type: 'button', data: {dismiss: 'modal'}}
           %span{aria: {hidden:'true'}} &times;
@@ -31,9 +31,9 @@
           .col-md-12
             .form-group
               = p.hidden_field :id
-              = p.label "service", t(:line_item)[:service], class: "col-sm-4 control-label"
+              = p.label :service
               .col-sm-7
-                = p.select "service_id", options_from_collection_for_select(line_item.service.organization.inclusive_child_services(:per_participant), "id", "name", line_item.service_id), {}, class: "form-control selectpicker"
+                = p.select :service_id, options_from_collection_for_select(line_item.service.organization.inclusive_child_services(:per_participant), "id", "name", line_item.service_id), {}, class: "selectpicker"
       .modal-footer
         .center-block{style: "width: 205px;"}
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t(:actions)[:close]
