--- a/app/views/dashboard/notifications/_new_notification.html.haml
+++ b/app/views/dashboard/notifications/_new_notification.html.haml
@@ -19,7 +19,7 @@
 -# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .modal-dialog
   .modal-content
-    = form_for notification, {remote: true, url: dashboard_notifications_path(notification), html: {class: "form-horizontal", role: "form"}} do |notification_form|
+    = form_for notification, {builder: BootstrapFormBuilder, remote: true, url: dashboard_notifications_path(notification), html: {class: "form-horizontal", role: "form"}} do |notification_form|
       .modal-header
         %button.close{type: 'button', data: {dismiss: 'modal'}}
           %span{aria: {hidden:'true'}} &times;
@@ -35,10 +35,10 @@
           = message_form.hidden_field :to
           .form-group
             .col-sm-12
-              = notification_form.text_field :subject, {class: 'form-control', placeholder: t(:dashboard)[:notifications][:form][:subject], rows: "6"}
+              = notification_form.text_field :subject, { placeholder: t(:dashboard)[:notifications][:form][:subject], rows: "6"}
           .form-group
             .col-sm-12
-              = message_form.text_area :body, {class: 'form-control', placeholder: t(:dashboard)[:notifications][:form][:message], rows: "6"}
+              = message_form.text_area :body, { placeholder: t(:dashboard)[:notifications][:form][:message], rows: "6"}
       .modal-footer
         .center-block
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}
