--- a/app/views/protocols/form/_protocol_form.html.haml
+++ b/app/views/protocols/form/_protocol_form.html.haml
@@ -20,18 +20,18 @@
 = stylesheet_link_tag 'protocol_form'
 
 #protocol-form-display
-  = form_for protocol, as: :protocol, remote: true, html: { class: 'form-horizontal', autocomplete: 'off' } do |form|
+  = form_for protocol, as: :protocol, builder: BootstrapFormBuilder, width: 2, locale_base: (protocol.type == "Study" ? "" : t(:protocols)[:projects][:information]), remote: true, html: { class: 'form-horizontal', autocomplete: 'off' } do |form|
     -# TODO rename :srid to :service_request_id in controller action
     = hidden_field_tag :service_request_id, service_request.id
     = hidden_field_tag :srid, service_request.id
     = form.hidden_field :requester_id
     = form.hidden_field :type
-    - if protocol.type.capitalize == "Study"
+    - if protocol.type == "Study"
       .edit-study-view.container-fluid
         .row.user-edit-protocol-view
           = render 'protocols/form/study_fields', form: form, protocol: protocol
 
-    - elsif protocol.type.capitalize == "Project"
+    - elsif protocol.type == "Project"
       .edit-project-view.container-fluid
         .row.user-edit-protocol-view
           = render 'protocols/form/project_fields', form: form, protocol: protocol
